Fixed arena remove